--- a/src/App.css
+++ b/src/App.css
@@ -160,18 +160,20 @@ p {
 }
 Button{
   width: 200px;
-  padding: 22px 0;
+  padding: 15px 0;
   text-align: center;
   margin: 20px 10px;
-  border-radius: 30px;
+  border-radius: 40px;
   font-weight: bold;
   border: 2px solid #4e0853;
   background: transparent;
   margin-top: 20%;
   color: #37093d;
   cursor: pointer;
+  margin-left: 15%;
   position: relative;
   overflow: hidden;
+  margin-bottom: 8%;
  
 }
 span{
