--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,29 @@
+body{
+  margin: 0;
+  padding: 0;
+  
+}
+:root{
+scroll-behavior: smooth;
+}
+
 img {
-  width: 200px; /* Adjust the width as needed */
-  height: 200px; /* Adjust the height as needed */
-  border-radius: 50%; /* This makes the image round */
-  object-fit: cover; /* Ensures the image covers the container without distortion */
+  width: 200px; 
+  height: 200px; 
+  border-radius: 50%; 
+  object-fit: cover; 
   
 }
 .logo-image{
-  width: 100px; /* Adjust width as needed */
-  height: auto; /* Maintain aspect ratio */
+  width: 100px; 
+  height: auto; 
   padding-right: 0%;
   margin-left: -30px;
   margin-top: 10px;
   margin-right: 0%;
+  cursor: pointer;
 }
-/* General styles */
+
 .app {
   font-family: Arial, sans-serif;
 }
@@ -85,23 +95,27 @@ img {
 .container {
   display: flex;
   margin-top: -10%;
+
 }
 
 
 .me-image {
-  width: 400px; /* Adjust the width as needed */
-  height: 400px; /* Adjust the height as needed */
-  border-radius: 50%; /* This makes the image round */
-  object-fit: cover; /* Ensures the image covers the container without distortion */
-  margin-right: 20px; /* Adds space between the image and text */
+  width: 400px; 
+  height: 400px; 
+  border-radius: 50%; 
+  object-fit: cover; 
+  margin-right: 20px; 
   margin-top: 20%;
   margin-left: 10%;
   border-image: linear-gradient(45deg, #ff6ec4, #7873f5) 1;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* Adds a shadow */
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); 
   transition: transform 0.3s, box-shadow 0.3s; 
-  animation: bounce 3s infinite; /* Adds the bouncing animation */
+  animation: bounce 3s infinite; 
+
+
+  
 }
-/* Keyframes for bounce animation */
+
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
     transform: translateY(0); /* Image at rest position */
@@ -119,35 +133,35 @@ img {
   align-items: center;
   margin-top: 20px;
   padding: 20px;  
-
+ 
 }
 
 h1 {
   margin: 0;
   margin-top:-30%;
-  text-align: right; /* Aligns the text to the right */
-  padding-right: 7%; /* Adds some space from the right edge */
-  font-size: 4rem; /* Increases font size, adjust as needed */
-  color: #4e0853; /* Dark purple color, complementing the background */
-  text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1); /* Subtle text shadow */
+  text-align: right; 
+  padding-right: 7%; 
+  font-size: 4rem; 
+  color: #4e0853; 
+  text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1); 
   font-weight: bold;
-  line-height: 1.2; /* Improves readability */
+  line-height: 1.2; 
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  position: relative; /* For potential decorative elements */
+  position: relative; 
 }
 
 h2 {
-  text-align: right; /* Aligns the text to the right */
-  font-size: 1.4rem; /* Adjust font size as needed */
-  color: #6e2775; /* Slightly lighter purple color */
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); /* Subtle text shadow */
+  text-align: right; 
+  font-size: 1.4rem; 
+  color: #6e2775; 
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); 
   font-weight: 600;
-  line-height: 1.3; /* Improves readability */
-  margin-top: 10px; /* Adds space between h1 and h2 */
-  margin-bottom: 20px; /* Adds space below h2 */
+  line-height: 1.3; 
+  margin-top: 10px; 
+  margin-bottom: 20px; 
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  letter-spacing: 1px; /* Adds some spacing between letters */
-  position: relative; /* For potential decorative elements */
+  letter-spacing: 1px; 
+  position: relative; 
   padding-right: 10%;
 }
 
