--- a/src/App.css
+++ b/src/App.css
@@ -296,12 +296,14 @@ text-align: center;
 
 
 .contact-content {
-  width: 100%;
+  max-width: 700px;
   text-align: center;
   padding: 20px;
   background: #f9f9f9;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  align-items: center;
+  justify-content: center;
 }
 
 .contact-image {
@@ -386,6 +388,7 @@ text-align: center;
 @media (max-width: 768px) {
   .contact-content {
     padding: 15px;
+    width: 100%;
   }
 
   .contact-image {
@@ -415,6 +418,7 @@ text-align: center;
 @media (max-width: 480px) {
   .contact-content {
     padding: 10px;
+    width: 100%;
   }
 
   .contact-image {
