--- a/src/App.css
+++ b/src/App.css
@@ -16,62 +16,113 @@ img {
   object-fit: cover; 
 }
 
-.logo-image{
-  width: 60px;
-  height: auto;
-  box-shadow: rgba(0, 0, 0, 0.4);
-  border-radius: 50%;
-}
-
 .app {
   font-family: Arial, sans-serif;
 }
 
+/* Header */
+
 .header {
-  background-color: #E8C5E5;
-  padding: 5px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
-  position: relative;
-  width: 100%;
-  position: fixed;
-  z-index: 1000;
-  top: 0;
+  background-color: #ff6ec564;
+  backdrop-filter: blur(4px);
+  padding: 10px 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .navbar {
   display: flex;
-  justify-content: center;
-  top: 0%;
-  width: 100%;
-  margin-top: 5px;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  position: relative;
 }
 
-.navbar-menu {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+.navbar-logo {
   display: flex;
   align-items: center;
 }
 
+.logo-image{
+  height: 50px;
+  width: auto;
+}
+
+.navbar-toggle {
+  display: none;
+  font-size: 1.5rem;
+  background: none;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+}
+
+.navbar-menu {
+  list-style-type: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
 .navbar-item {
-  margin: 0 20px;
-  font-size: 16px;
+  text-transform: uppercase;
+  font-size: 1rem;
 }
 
 .navbar-item a {
-  color: rgb(22, 21, 21);
+  color: #333;
   text-decoration: none;
-  font-size: 18px;
-  padding: 5px 15px;
-  transition: background-color 0.5s, color 0.5s;
-  border-radius: 20px;
+  padding: 8px 12px;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .navbar-item a:hover {
-  background-color: #d59dc2;
-  border-radius: 20px;
-  transition: .3s;
+  background-color: #34495e;
+  color: #fff;
+  border-radius: 10px;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .navbar-toggle {
+    display: block;
+  }
+
+  .navbar-menu {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    background-color: #ff6ec575;
+    width: 100%;
+    gap: 10px;
+    padding: 10px 0;
+    z-index: 10000px;
+  }
+
+  .navbar-menu.open {
+    display: flex;
+  }
+
+  .navbar-item {
+    text-align: center;
+    width: 100%;
+  }
+
+  .logo-image {
+    height: 40px;
+  }
+}
+
+@media (min-width: 769px) {
+  .navbar-menu {
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
 .me-image {
