--- a/src/App.css
+++ b/src/App.css
@@ -226,16 +226,17 @@ text-align: center;
   padding: 10px;
 }
 .footer-social a {
-  color: #040404;
-  margin: 0 10px;
-  font-size: 16px;
+  color: #f6c2f0;
+  margin: 0 30px;
+  font-size: 15px;
   text-decoration: none;
   transition: color 0.5s;
   display: inline;
   align-items: center;
 }
 .footer-social a i {
-  margin-left: 5px;
+  margin-left: 10px;
+  padding: 0%;
 }
 
 .footer-social a:hover {
@@ -246,6 +247,8 @@ text-align: center;
   margin-top: 20px;
   font-size: 17px;
   text-align: center;
+  color: #ebbadd;
+ 
 }
 
 /* About */
@@ -338,7 +341,7 @@ text-align: center;
 
 /*Contact Me page*/
 .Contact {
-  background-color: #ffffff;
+  background-color: #ebe2e8;
   min-height: 100vh;
   padding-top: 300px; 
   flex-direction: column;
@@ -387,7 +390,7 @@ text-align: center;
 }
 
 .contact-details a {
-  color: #007bff;
+  color: #f444e3;
   text-decoration: none;
 }
 
@@ -411,8 +414,8 @@ text-align: center;
   position: absolute;
   top: 210px;
   right: 100px;
-  width: 350px; 
-  height: 350px; 
+  width: 400px; 
+  height: 400px; 
   border-radius: 250px; 
   box-shadow: 0 4px 8px rgba(237, 121, 200, 0.2); 
 }
@@ -421,7 +424,7 @@ text-align: center;
 /* Responsive adjustments */
 @media (max-width: 768px) {
   .Contact {
-    padding-top: 60px; /* Adjust padding-top */
+    padding-top: 60px; 
   }
 
   .contact-content {
@@ -454,13 +457,13 @@ text-align: center;
   }
 
   .contact-image {
-    position: relative; /* Change to relative for small screens */
-    width: 200px; /* Smaller width */
-    height: 200px; /* Smaller height */
-    top: 20px; /* Adjust top position */
-    left: 0; /* Center image on smaller screens */
-    margin-top: 50px; /* Add margin-top */
-    border-radius: 100px; /* Adjust border radius */
+    position: relative; 
+    width: 200px; 
+    height: 200px; 
+    top: 20px; 
+    left: 0; 
+    margin-top: 50px;
+    border-radius: 100px; 
     margin-left: 80%;
   }
 }
@@ -488,8 +491,8 @@ text-align: center;
   }
 
   .contact-image {
-    width: 150px; /* Even smaller width */
-    height: 150px; /* Even smaller height */
-    border-radius: 75px; /* Adjust border radius */
+    width: 150px; 
+    height: 150px; 
+    border-radius: 75px; 
   }
 }
